--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "sass": "^1.32.8"
+  },
+  "devDependencies": {
+    "prettier": "2.2.1"
   }
 }
